--- a/Project-12.qmd
+++ b/Project-12.qmd
@@ -76,3 +76,13 @@ The rest of our data (GDP, GDP per capita, rural population, life expectancy at 
 - For the total net enrolment rate by level of education, we selected the "Education" category then the "Other policy relevant indicators" section and then "Number of students and enrolment/attendance rates by level of education" and then the "Enrolment ratios" sub-section. Here, we choose each level of education but only for both sexes. 
 
 - For illiterate population, we selected the "Education" category then the "Other policy relevant indicators" section then the "Number of illiterates/percentage of illiterate who are female" sub-section and then we select "illiterate population".
+
+## Sources description
+
+Our World in Data is a free online publication founded by Max Roser, an economist, and directed by the University of Oxford. They focus on providing comprehensive database and data visualizations to make information about global development more accessible. 
+
+The World Bank is a financial institution that provides loans and grants to the governments of developing countries for the purpose of pursuing investments projects. On top of that, they collect, analyse, and publish a wide range of data on various aspects of the economies and societies of their member countries. These data are made available to the public and are widely used by researchers, policy-makers, businesses, and the general public.
+
+UNdata is an search engine that provides access to a wide range of statistical databases and other data sources covering various economic, social, demographic, and environmental topics. This service has been developed in partnership with the United Nations Statistics Division and the Statistics Sweden and the Swedish International Development Cooperation Agency in 2008.
+
+The United Nations Educational, Scientific and Cultural Organization (UNESCO) is a specialized agency of the United Nations established in 1945. The organization mission is to contribute to the building of peace, the eradication of poverty, sustainable development and intercultural dialogue through education, sciences and culture. One of their objectives is to ease access to data. That is why, they also produce database about education, culture, science, and communication.
