--- a/Project-12.qmd
+++ b/Project-12.qmd
@@ -65,7 +65,7 @@ The Press freedom index and the Access to electricity tables are both sourced fr
 
 The table for the religion per country comes from the the UNdata website, available [here](https://data.un.org/Data.aspx?d=POP&f=tableCode%3A28). 
 
-The rest of our data (GDP, GDP per capita, rural population, life expectancy at birth, public expenditure allocated towards education, the total net enrolment rate by level of education and illiterate population) comes from the UNESCO website, available [here](http://data.uis.unesco.org/?lang=en&SubSessionId=4db844f6-01dd-458d-84db-7a36d4601fa2&themetreeid=-200). TO find each of them in the website, we did the following :
+The rest of our data (GDP, GDP per capita, rural population, life expectancy at birth, public expenditure allocated towards education, the total net enrolment rate by level of education and illiterate population) comes from the UNESCO website, available [here](http://data.uis.unesco.org/?lang=en&SubSessionId=4db844f6-01dd-458d-84db-7a36d4601fa2&themetreeid=-200). To find each of them in the website, we did the following :
 
 - for GDP and GDP per capita, we selected the "demographic and socio-economic" category and then the "socio-economic" section. 
 
@@ -88,6 +88,9 @@ UNdata is an search engine that provides access to a wide range of statistical d
 The United Nations Educational, Scientific and Cultural Organization (UNESCO) is a specialized agency of the United Nations established in 1945. The organization mission is to contribute to the building of peace, the eradication of poverty, sustainable development and intercultural dialogue through education, sciences and culture. One of their objectives is to ease access to data. That is why, they also produce database about education, culture, science, and communication.
 
 ## Data Cleaning 
+
+We are now cleaning the variables from the UNESCO website.
+
 
 All the datasets from the UNESCO site have the same structure, as seen below:
 
@@ -112,13 +115,11 @@ sum(educ_expenditure$Time == educ_expenditure$TIME) == nrow(educ_expenditure)
 ```
 
 Here, we see that this column contains the same value each time. So, we will also remove this column.
-
 ```{r}
 educ_expenditure |> distinct(NATMON_IND)
 ```
 
 We will now apply the following function to all of the UNESCO data. 
-
 ```{r}
 datacleaning_unesco <- function(data){
     data |> select(-`Flag Codes`, - Flags, - TIME, -ends_with("IND"))
@@ -133,4 +134,114 @@ population <- datacleaning_unesco(population)
 enrolment  <- datacleaning_unesco(enrolment)
 illiteracy <-datacleaning_unesco(illiteracy)
 rural <- datacleaning_unesco(rural)
+```
+
+
+
+
+
+We now are doing the data cleaning of the electricity variable. 
+```{r}
+electricity |> 
+  names()|>
+  knitr::kable()
+```
+
+Here, we want to see what values these columns take. 
+```{r}
+electricity |> distinct(`Series Code`, `Series Name`)
+```
+
+Because access to electricity is our variable of interest, we filter the dataset.
+```{r}
+electricity <- electricity |>
+  filter(`Series Name`== "Access to electricity (% of population)")|> 
+  select(- `Series Code`)
+```
+
+We now are going to rename the columns for them to match the other variables from the UNESCO.
+```{r}
+electricity <- electricity |> 
+  rename("Country" = "Country Name", "LOCATION"= "Country Code", "Indicator"="Series Name")
+```
+
+We do pivot_longer in order to have all of our datasets in the same format.
+```{r}
+electricity <- electricity |> 
+  pivot_longer(!(Indicator| Country| LOCATION)) |> 
+  rename("Time"= "name", "Value"= "value") |> 
+  mutate("Time"= as.numeric(substr(Time, 1, 4)))
+```
+
+
+
+
+
+We now are cleaning the PressFreedom variable.
+```{r}
+PressFreedom |> 
+  names() |>
+  knitr::kable()
+```
+
+```{r}
+PressFreedom |> distinct(`Subindicator Type`, `Indicator ID`)
+```
+
+```{r}
+PressFreedom <- PressFreedom |> select(- `Indicator ID`, - `Subindicator Type`)
+```
+
+```{r}
+PressFreedom <- PressFreedom |> rename("Country" = "Country Name", "LOCATION"= "Country ISO3")
+```
+
+```{r}
+PressFreedom |> count(Indicator)
+```
+
+Because our PressFreedom table contains two indicators we split the table in order to have two tables representing each indicator. 
+```{r}
+PressFreedomIndex <- PressFreedom |> filter(Indicator == "Press Freedom Index")
+PressFreedomRank <- PressFreedom |> filter(Indicator == "Press Freedom Rank")
+```
+
+```{r}
+PressFreedom <- PressFreedom |> pivot_longer(!(LOCATION | Country | Indicator)) |> rename("Time"="name", "Value"="value")
+```
+
+
+
+
+
+We now are cleaning the Religion variable.
+
+First, we want to have a look at the columns names of our dataset.
+```{r}
+religion |> 
+  names() |> 
+  knitr::kable()
+```
+
+The Reliability variable only takes one value. 
+```{r}
+religion |> distinct(Reliability)
+```
+
+Since our analysis is not based on gender disparity, we are going to only select "Both Sexes" values. Then, we will remove the columns we deem unnecessary and rename the remaining columns. 
+```{r}
+religion <- religion |> 
+  filter(Sex=="Both Sexes") |> 
+  select(-Sex, -Reliability, - "Value Footnotes", -"Source Year") |>  
+  rename("Country" = "Country or Area")
+```
+
+
+
+
+
+To finish, we now are cleaning the Institution variable, which only consists of renaming its columns. 
+```{r}
+institution <- institution |> 
+  rename("Country" = "Entity", "LOCATION"= "Code", "Value"= "stability_dem_inst_bti", "Indicator"= "Stability of Institutions")
 ```
