--- a/Project-12.qmd
+++ b/Project-12.qmd
@@ -116,7 +116,9 @@ sum(educ_expenditure$Time == educ_expenditure$TIME) == nrow(educ_expenditure)
 
 Here, we see that this column contains the same value each time. So, we will also remove this column.
 ```{r}
-educ_expenditure |> distinct(NATMON_IND)
+educ_expenditure |>
+  distinct(NATMON_IND) |> 
+  knitr::kable()
 ```
 
 We will now apply the following function to all of the UNESCO data. 
@@ -149,7 +151,9 @@ electricity |>
 
 Here, we want to see what values these columns take. 
 ```{r}
-electricity |> distinct(`Series Code`, `Series Name`)
+electricity |> 
+  distinct(`Series Code`, `Series Name`) |> 
+  knitr::kable()
 ```
 
 Because access to electricity is our variable of interest, we filter the dataset.
@@ -185,7 +189,9 @@ PressFreedom |>
 ```
 
 ```{r}
-PressFreedom |> distinct(`Subindicator Type`, `Indicator ID`)
+PressFreedom |> 
+  distinct(`Subindicator Type`, `Indicator ID`) |>
+  knitr::kable()
 ```
 
 ```{r}
@@ -197,7 +203,9 @@ PressFreedom <- PressFreedom |> rename("Country" = "Country Name", "LOCATION"= "
 ```
 
 ```{r}
-PressFreedom |> count(Indicator)
+PressFreedom |> 
+  count(Indicator) |> 
+  knitr::kable()
 ```
 
 Because our PressFreedom table contains two indicators we split the table in order to have two tables representing each indicator. 
@@ -225,7 +233,9 @@ religion |>
 
 The Reliability variable only takes one value. 
 ```{r}
-religion |> distinct(Reliability)
+religion |> 
+  distinct(Reliability) |> 
+  knitr::kable()
 ```
 
 Since our analysis is not based on gender disparity, we are going to only select "Both Sexes" values. Then, we will remove the columns we deem unnecessary and rename the remaining columns. 
@@ -243,5 +253,80 @@ religion <- religion |>
 To finish, we now are cleaning the Institution variable, which only consists of renaming its columns. 
 ```{r}
 institution <- institution |> 
-  rename("Country" = "Entity", "LOCATION"= "Code", "Value"= "stability_dem_inst_bti", "Indicator"= "Stability of Institutions")
+  rename("Country" = "Entity", "LOCATION"= "Code", "Value"= "stability_dem_inst_bti")|>
+  mutate("Indicator"= "Stability of Institutions")
+```
+
+## Data description and Tables 
+
+The government expenditure on education is expressed in millions US$. 
+
+This table has `r educ_expenditure |> ncol()` columns, which are `r educ_expenditure |> names()`.
+
+It has `r educ_expenditure |> nrow()` rows and each of them represents a particular country at a particular year. Here is a table with basic statistics of the Expenditure on education variable.
+
+```{r}
+educ_expenditure |> 
+  filter(Country != "Holy See") |> 
+  group_by(Country) |> 
+  summarise("min" = min(Value, na.rm=TRUE), "median" = median(Value, na.rm=TRUE), "max"= max(Value, na.rm=TRUE), "mean"= mean(Value, na.rm=TRUE)) |> 
+  head(n=10) |> 
+  knitr::kable(caption= "statistics of Expenditure on education per year")
+```
+
+The GDP and GDP per capita are expressed in terms of current US$. 
+
+This GDP table has `r GDP |> ncol()` columns, which are `r GDP |> names()`. It has `r GDP |> nrow()` rows and each of them represents a particular country at a particular year. Here is a table with basic statistics of the GDP variable.  
+
+```{r}
+GDP |> 
+  group_by(Country) |> 
+  summarise("min" = min(Value, na.rm=TRUE), "median" = median(Value, na.rm=TRUE), "max"= max(Value, na.rm=TRUE), "mean"= mean(Value, na.rm=TRUE)) |> 
+  head(n=10) |> 
+  knitr::kable(caption= "statistics of GDP")
+```
+
+This GDP per capita  table has `r GDP_capita |> ncol()` columns, which are `r GDP_capita |> names()`. It has `r GDP_capita |> nrow()` rows and each of them represents a particular country at a particular year. Here is a table with basic statistics of the GDP per capita variable. 
+
+```{r}
+GDP_capita |> 
+  group_by(Country) |> 
+  summarise("min" = min(Value, na.rm=TRUE), "median" = median(Value, na.rm=TRUE), "max"= max(Value, na.rm=TRUE), "mean"= mean(Value, na.rm=TRUE)) |> 
+  head(n=10) |>
+  knitr::kable(caption= "statistics of GDP per capita per year")
+```
+
+Life expectancy at birth is expressed in total years.
+
+This Life expectancy at birth table has `r life_expectancy|> ncol()` columns, which are `r life_expectancy |> names()`. It has `r life_expectancy|> nrow()` rows and each of them represents a particular country at a particular year. Here is a table with basic statistics of the Life expectancy at birth variable.  
+
+```{r}
+life_expectancy |> 
+  group_by(Country) |> 
+  summarise("min" = min(Value, na.rm=TRUE), "median" = median(Value, na.rm=TRUE), "max"= max(Value, na.rm=TRUE), "mean"= mean(Value, na.rm=TRUE)) |> 
+  head(n=10) |> 
+  knitr::kable(caption= "statistics of Life expectancy at birth (years) per year")
+```
+
+This total population table has `r population |> ncol()` columns, which are `r population |> names()`. It has `r population|> nrow()` rows and each of them represents a particular country at a particular year. Here is a table with basic statistics of the total population variable. 
+
+```{r}
+population |> 
+  group_by(Country) |> 
+  summarise("min" = min(Value, na.rm=TRUE), "median" = median(Value, na.rm=TRUE), "max"= max(Value, na.rm=TRUE), "mean"= mean(Value, na.rm=TRUE)) |> 
+  head(n=10) |> 
+  knitr::kable(caption= "statistics of population per year")
+```
+
+The total net enrolment rate (in upper secondary, lower secondary and primary) of both sexes is expressed in percentage. 
+
+This  total net enrolment rate table has `r enrolment |> ncol()` columns, which are `r enrolment |> names()`. It has `r enrolment |> nrow()` rows and each of them represents a particular country at a particular year. Here is a table with basic statistics of the total net enrolment rate at birth variable.  
+
+```{r}
+enrolment |> 
+  filter(Country != "Holy See") |> 
+  group_by(Country) |> 
+  summarise("min" = min(Value, na.rm=TRUE), "median" = median(Value, na.rm=TRUE), "max"= max(Value, na.rm=TRUE), "mean"= mean(Value, na.rm=TRUE)) |> 
+  head(n=10) |> 
+  knitr::kable(caption= "statistics of Enrolment per year")
 ```
