--- a/Project-12.qmd
+++ b/Project-12.qmd
@@ -364,7 +364,7 @@ electricity |>
 
 
 
-The press freedom table shows for each country their rank and index. 
+The press freedom table shows for each country their rank and index. The index used ranges from 0 to 100 with 100 being a country with the best press freedom. This Index has been created by the Reporters Without Borders(RSF).
 
 This  press freedom table has `r PressFreedom |> ncol()` columns, which are `r PressFreedom |> names()`. It has `r PressFreedom |> nrow()` rows and each of them represents a particular country at a particular year. Here is a table with basic statistics of the  press freedom variable.  
 ```{r}
@@ -376,7 +376,7 @@ PressFreedom |> group_by(Country) |>
 
 
 
-The stability of institutions of each country is represented with the Bertelsmann Transformation Index (BTI). This index is a global ranking and analysis of political and economic transformation in developing countries. It is published by the Bertelsmann Stiftung, a German private foundation.
+The stability of institutions of each country is represented with the Bertelsmann Transformation Index (BTI). It ranges from 0 to 10 with 10 representing the most stable countries. This index is published by the Bertelsmann Stiftung, a German private foundation.
 
 This stability of institutions table has `r institution |> ncol()` columns, which are `r institution |> names()`. It has `r institution|> nrow()` rows and each of them represents a particular country at a particular year. Here is a table with basic statistics of the stability of institutions variable. 
 ```{r}
