Research Question changes and datamerge document explaination

--- a/Project-12.qmd
+++ b/Project-12.qmd
@@ -402,11 +402,16 @@ religion |> filter(Religion != "Total") |>
 
 ## Research question description 
 
-Nowadays, the majority of individuals attain a secondary education, marking a notable shift from historical trends. Illiteracy, defined as the incapacity to read or write, was widespread in 1820, with only 12% of the global population possessing these skills. Since then, a significant reversal has occurred. Over the past 65 years, the global literacy rate has consistently increased by 4% every five years, rising from 42% in 1960 to 86% in 2015. Despite this progress, a considerable segment of the population remains illiterate, constituting 14% of the world population as of 2016.The causes behind this persistent illiteracy are subject to debate, with factors such as poverty, population growth, and ineffective government policies often cited. 
+Most people today complete secondary education, which is a major shift from past trends. In the year 1820, only 12 percent of people worldwide were literate, which is defined as the ability of reading and writing. Since then, there has been a notable reversal. The global literacy rate has risen by 4% per five years for the previous 65 years, from 42% in 1960 to 86% in 2015. Even with these advancements, a sizeable portion of the population, 14% of the global population as of 2016, remains illiterate. 
+There is debate on the reasons for this ongoing illiteracy, however elements like poverty, population increase, and ineffectual government initiatives are frequently mentioned. 
 
-However, in our study, we refrain from addressing the "why" question. The scale and methodologies employed are not sufficiently robust for us to draw causal conclusions. Instead, our approach is more observational, focusing on the "who" aspect. Our objective is to identify common characteristics among illiterate individuals, allowing us to observe patterns in this demographic.  To facilitate our study, we opt to concentrate on a specific subset of the illiterate population, namely, the young illiterates (defined here as 15-24 years old). This demographic will be analysed on a country-by-country basis. Essentially, our aim is to assert whether there are commonalities in countries experiencing high levels of youth illiteracy. To achieve this, we have selected multiple variables that we believe provide insightful information, including institutional stability, overall population, rural population, GDP, GDP per capita, access to electricity, religion, and the percentage of enrolment by educational level, among others.  
+That being said, the aim of our research is not to answer the "why" question. Insufficient robustness in the methodology used prevents us from drawing conclusions about causality. Rather, we take a more observational approach, concentrating on the "who" component. 
 
-At the end of our work, we anticipate two possible outcomes. First, no discernible patterns emerge, which will tell us that the distribution of the illiterate population is genuinely random and relatively evenly spread across the global population. Second, similarities are observed among countries with high levels of illiteracy which will allow us to speculate on potential explanations for illiteracy.
+Our goal is to find traits that countries with high levels of young illiterate people have in common so that we can see trends within this group. In order to do so, we choose to focus on the young illiterate population, which is defined as those between the ages of 15 and 24. We'll be looking at this population country by country. Our main goal is to determine whether nations with high rates of youth illiteracy have something in common. 
+
+To achieve this, we have selected multiple variables that we believe provide insightful information, including institutional stability, overall population, rural population, GDP, GDP per capita, access to electricity, religion, and the percentage of enrollment by educational level, among others. 
+
+At the end of our work, we anticipate two possible outcomes. First, no obvious trends show up, indicating that the distribution of the young illiterate population is actually random and dispersed quite evenly throughout the world's population. Second, similarities are observed among countries with high levels of illiteracy which will allow us to speculate on potential explanations for illiteracy.
 
 ## Graphical representation of our target variable
 
